cleans up the photo stack and makes it position correctly on iOS devices

--- a/media/styles/header.sass
+++ b/media/styles/header.sass
@@ -8,8 +8,11 @@ body
 .ui-bar-a, .ui-page-theme-a .ui-bar-inherit
   background: #FFF
 
-
-.ui-header
+//
+// Photo Stack Header
+//
+#header
+  border-bottom: 1px solid $gray
   .ui-btn
     border: none
     background: transparent
