--- a/media/styles/utils.sass
+++ b/media/styles/utils.sass
@@ -3,6 +3,14 @@
   -moz-border-radius: $value
   border-radius: $value
 
+@mixin border-radius-top($value)
+  -webkit-border-top-left-radius: $value
+  -webkit-border-top-right-radius: $value
+  -moz-border-radius-topleft: $value
+  -moz-border-radius-topright: $value
+  border-top-left-radius: $value
+  border-top-right-radius: $value
+
 @mixin box-sizing($type)
   -webkit-box-sizing: $type
   -moz-box-sizing: $type
