--- a/media/styles/variables.sass
+++ b/media/styles/variables.sass
@@ -1,4 +1,6 @@
 $red: #E31212
 $lightest_gray: #EEE
 $light_gray: #DDD
+$gray: #CCC
 $dark_gray: #777
+$black: #222
